--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <title>Document</title>
-    <link rel="stylesheet" href="style-2.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- project -->
@@ -386,6 +386,6 @@
       </div>
     </div>
 
-    <script src="./app-2.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
