--- a/index.html
+++ b/index.html
@@ -53,15 +53,20 @@
                 <h1 class="proj-title">portfolio</h1>
                 <div class="project-img"></div>
                 <p class="info">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Consequuntur, amet. Iste perferendis quaerat itaque facilis
-                  accusantium totam dolore nihil minima.
+                  •Inspired by Microsoft’s Windows classic interface.
+                  <br />
+                  •Made the concept in Figma. <br />
+                  •Uses vanilla Javascript.
                 </p>
               </div>
               <div class="project-viewer" id="proj-two">
                 <h1 class="proj-title">Landing Page</h1>
                 <div class="project-img"></div>
-                <p class="info">Inpired</p>
+                <p class="info">
+                  •For e-commerce
+                  <br />
+                  •Uses HTML & CSS
+                </p>
               </div>
               <div class="project-viewer" id="proj-three">
                 <h1 class="proj-title">project 3</h1>
