--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
             <div class="proj-viewers">
               <div class="project-viewer" id="proj-one">
                 <h1 class="proj-title">portfolio</h1>
-                <div class="project-img"></div>
+                <a href="https://bit.ly/3S1jpPk" target="_blank"
+                  ><img
+                    src="images/proj_001.png"
+                    alt="project one"
+                    class="project-img"
+                /></a>
                 <p class="info">
                   •Inspired by Microsoft’s Windows classic interface.
                   <br />
@@ -61,7 +66,12 @@
               </div>
               <div class="project-viewer" id="proj-two">
                 <h1 class="proj-title">Landing Page</h1>
-                <div class="project-img"></div>
+                <a href="https://bit.ly/3Lbo4w1" target="_blank"
+                  ><img
+                    src="images/proj_002.png"
+                    alt="project two"
+                    class="project-img"
+                /></a>
                 <p class="info">
                   •For e-commerce
                   <br />
